--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Webpack Starter Kit</title>
 
     <!-- Don't forget to delete this style tag. -->
-    <style>
+    <!-- <style>
       body {
         min-height: 100vh;
         margin: 0;
@@ -31,15 +31,15 @@
         max-width: 100%;
         height: auto;
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
     <article class="intro">
-      <h1>Webpack starter kit</h1>
+      <!-- <h1>Webpack starter kit</h1> -->
 
       <!-- HTML image reference example. -->
-      <img src="./images/intro.png" alt="" width="640" />
+      <!-- <img src="./images/intro.png" alt="" width="640" /> -->
     </article>
   </body>
 </html>
