--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>Webpack Starter Kit</title>
 
     <!-- Don't forget to delete this style tag. -->
@@ -36,6 +37,14 @@
 
   <body>
     <article class="intro">
+      <form class="search-form" id="search-form">
+        <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+      </form>
+      <div>
+        <ul class="gallery">
+        <!-- Список <li> с карточками изображений -->
+        </ul>
+      </div>
       <!-- <h1>Webpack starter kit</h1> -->
 
       <!-- HTML image reference example. -->
