--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
     <article class="intro">
       <form class="search-form" id="search-form">
         <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
-        <button type="submit" class="btnSerch">Search</button>
+        <button type="submit" class="btn btn-search">Search</button>
       </form>
-      <div>
+      <div class="container">
         <ul class="gallery">
         <!-- Список <li> с карточками изображений -->
         </ul>
